# MockmindAI

./: .dockerignore  .env.example  .gitignore  .tmp-nginx-active.conf  AGENTS.md  HOW_IT_WORKS.md  README.md  VOICE_AGENT_GUIDE.md  Vagrantfile  agent_logs.txt  agent_logs2.txt  api_logs.txt  compose-up.ps1  compose-up.sh  docker-compose.cloud.yml  docker-compose.gpu.yml  docker-compose.yml  docker_status.txt  lines.txt  lines2.txt  lines3.txt  package.json  patch.js  patch.py  patch2.py  patch3.py  patch4.py  test_intercept.py
apps/ai-services/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  terminal_chat.py  terminal_cv.py  terminal_rag.py  test_google.py  test_speech_analysis.py  test_vad.py
apps/ai-services/agent/: data_store.py  livekit_client.py  main.py  model_factory.py  models.py  rag_cache.py  room_metadata.py  session_collector.py  settings.py  test_connection.py  voice_agent.py  voice_helpers.py
apps/ai-services/agent/analysis/: __init__.py  audio_analyzer.py  combined_scorer.py  cv_analyzer.py  report_generator.py  semantic_analyzer.py  sentiment_analyzer.py  speech_analyzer.py  turn_analyzer.py  turn_scoring.py
apps/ai-services/agent/rag/: __init__.py  document_processor.py  interview_agent.py  schemas.py  vector_store.py
apps/ai-services/agent/routers/: auth.py  data.py  documents.py  health.py  reports.py
apps/ai-services/scripts/: dev.ps1
apps/api/: Dockerfile  package.json  prisma.config.ts
apps/api/prisma/: prisma.config.ts  schema.prisma  seed.ts
apps/api/public/recordings/: egress.yaml
apps/api/src/: app.controller.ts  app.module.ts  main.ts  prisma.service.ts
apps/api/src/admin/: admin.controller.ts  admin.guard.ts
apps/api/src/agent/: agent.controller.spec.ts  agent.controller.ts  agent.module.ts  agent.service.spec.ts  agent.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  google.strategy.ts  jwt-auth.guard.ts  jwt.strategy.ts
apps/api/src/community/: community.controller.ts  community.module.ts  community.service.ts
apps/api/src/data/: data.controller.ts  data.module.ts  data.service.ts
apps/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_env.py  check_models.py  pyproject.toml  test_pipeline.py
apps/backend/agent/: data_store.py  db.py  main.py  models.py  models_sql.py  seed.py  settings.py  voice_agent.py
apps/backend/agent/routers/: auth.py  data.py  health.py  livekit.py
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 20251221_000001_init_sqlmodel_tables.py  51a38bfda90c_add_email_to_user.py
apps/backend/scripts/: start-agent.ps1
apps/platform/: Dockerfile  next.config.ts  package.json
apps/platform/app/: globals.css  layout.tsx  page.tsx
apps/platform/components/: component-example.tsx
apps/platform/data/: mockData.ts
apps/platform/hooks/: useMediaDevices.ts  useNotifications.ts  useTemplates.ts
apps/platform/lib/: backend.ts  fallback-data.ts
apps/web/: package.json
apps/web/app/: page.tsx
inference/kokoro/: Dockerfile
inference/llama/: Dockerfile
inference/whisper/: Dockerfile
nginx/: nginx.conf.example
vagrant/: provision.sh
(+71 files in other folders)
