[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-voice-agent-backend"
version = "0.1.0"
description = "Backend API for AI voice agent (FastAPI + LiveKit)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "livekit>=0.22.0",
  "livekit-api>=0.9.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "sqlmodel>=0.0.16",
  "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
